<resources>
    <string name="app_name">Journal</string>
    <string name="btn_home">Home</string>
    <string name="btn_add">Add</string>
    <string name="btn_list">List</string>
    <string name="btn_search">Search</string>
    <string name="text_radioPrompt">Select a category:</string>
    <string name="radio_work">Work</string>
    <string name="radio_personal">Personal</string>
    <string name="text_notePrompt">Enter a note:</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="btn_loadList">Load Entries</string>
    <string name="text_radioEditPrompt">Edit the category:</string>
    <string name="text_noteEditPrompt">Edit the note:</string>
    <string name="btn_delete">Delete</string>
</resources>
