<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entry_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.tees.q5071488.journal.EntryDetail">

    <TextView
        android:text="Date:"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dateDisplay"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

    <TextView
        android:text="@string/text_noteEditPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/notePrompt"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_below="@+id/radioCategory"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editNote"
        android:layout_below="@+id/notePrompt"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        tools:text="..."/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:drawableTop="@drawable/ic_cancel_black_18dp"
        android:text="@string/btn_cancel"
        android:textColor="#e8e9e9"
        android:id="@+id/buttonCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:drawableTop="@drawable/ic_save_black_18dp"
        android:text="@string/btn_save"
        android:textColor="#e8e9e9"
        android:id="@+id/buttonSave"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#3F51B5"
        android:drawableTop="@drawable/ic_delete_forever_black_18dp"
        android:text="@string/btn_delete"
        android:textColor="#e8e9e9"
        android:id="@+id/buttonDelete"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <RadioGroup
        android:id="@+id/radioCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateDisplay"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/text_radioEditPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/radioPrompt"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <RadioButton
            android:id="@+id/radioWork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_work"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_personal" />

    </RadioGroup>

</RelativeLayout>
